Update index.html - redirect to contact.vcf

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         // Function to handle tracking and redirection
         function redirectToVCard() {
             // URL of the vCard file
-            var vCardURL = "test.html";
+            var vCardURL = "contact.vcf";
 
             // Perform tracking (send a request to your server)
             // [Insert AJAX call or tracking logic here]
