--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     }
 
     // Call the function
-    logScan();
+    
     </script>
 
 </head>
-<body onload="redirectToVCard()">
+<body onload="logScan(); redirectToVCard();">
     <p>Redirecting to contact...</p>
     <!-- Optionally include a manual download link in case automatic redirection fails -->
     <p>If you are not redirected, <a href="https://yourdomain.com/contact.vcf">click here</a> to download the contact.</p>
