Update index.html - correct manual redirect

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 <body onload="redirectToVCard()">
     <p>Redirecting to contact...</p>
     <!-- Optionally include a manual download link in case automatic redirection fails -->
-    <p>If you are not redirected, <a href="https://yourdomain.com/contact.vcf">click here</a> to download the contact.</p>
+    <p>If you are not redirected, <a href="contact.vcf">click here</a> to download the contact.</p>
 </body>
 </html>
